<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">APP Ellas</string>
    <string name="descripcion_pagina">Bienvenidas a AppEllas esta aplicacion esta creada para aquellas usuarias de El Salvador que desean convivir mucho mas seguras en un entorno donde la sociedad no garantiza una seguridad social y en donde las usuarias podran encontrar un espacio donde buscar ayuda y sentirse con la confianza plena de que su informacion es manejada de manera profesional de la mano de las leyes del pais</string>
    <string name="administrar_cuentas">Administrar cuentas</string>
    <string name="mapa_de_emergencias">Mapa de emergencias</string>
    <string name="seccion_juridica">JURIDICO</string>
    <string name="seccion_doctores">DOCTORES</string>
    <string name="seccion_psicologo">PSICOLOGO</string>
    <string name="enviar_alerta_text" tools:ignore="DuplicateDefinition">Enviar alerta!</string>
    <string name="alerta_emitida_text">ALERTA EMITIDA!</string>
    <string name="autoridades_encamino">LAS AUTORIDADES VAN DE CAMINO!</string>
    <string name="contactos_de_confianza">Contactos de confianza</string>
    <string name="compartir_button">Compartir:</string>
    <string name="facebook_text">Facebook</string>
    <string name="instagram_text">Instagram</string>
    <string name="twitter_text">Twitter</string>
    <string name="titulo_hint">Titulo</string>
    <string name="subtitulo_hint">Subtitulo</string>
    <string name="descripcion_hint">Descripcion</string>
    <string name="numero_de_telefono_text">Numero de telefono</string>
    <string name="nombre_del_contacto_text">Nombre del contacto</string>
    <string name="nombre_hint">Nombre</string>
    <string name="crear_contacto_text">Crear contacto</string>
    <string name="blog_informativo_text">Blog informativo</string>
    <string name="asesoria_text">Asesoria</string>
    <string name="mapa_de_informacion_text">Mapa de informacion</string>
    <string name="pagina_de_informacion_text">Pagina de informacion</string>
    <string name="compartir_experiencia_text">Compartir experiencia</string>
    <string name="asalto_sexual_text">ASALTO SEXUAL</string>
    <string name="no_te_quedes_solo_text">NO TE QUEDES SOLO</string>
    <string name="mensaje_asalto_sexual">Comuniquese con un amigo o una persona de tu total confianza. Hay personas que pueden brindarle el apoyo emocional...</string>
    <string name="usuario_hint">Usuario</string>
    <string name="ejemplo_usuario">p.e Jnasser513</string>
    <string name="contrasena_label">Contraseña:</string>
    <string name="ingresar_text">Ingresar</string>
    <string name="contrase_a_olvidada_text">¿Contraseña olvidada?</string>
    <string name="sin_cuentra_registrate_text">¿Sin cuenta? Registrate</string>
    <string name="medico_1_text">Medico #1</string>
    <string name="medico_2_text">Medico #2</string>
    <string name="medico_3">Medico #3</string>
    <string name="medico_4_text">Medico #4</string>
    <string name="medico_5_text">Medico #5</string>
    <string name="nombre_de_usuario_text">Nombre de usuario</string>
    <string name="roberta_text_ejemplo">e.j. Roberta</string>
    <string name="email_de_usuario_ejemplo">Email de usuario</string>
    <string name="email_example_correo_ejemplo">Email@example.com</string>
    <string name="cambiar_contrasena_text">Cambiar contrasena</string>
    <string name="contrasena_ejemplo">Contraseña</string>
    <string name="cerrar_sesion_text">Cerrar sesion</string>
    <string name="eliminar_cuenta_ejemplo">Eliminar cuenta</string>
    <string name="psicologo_1_text">Psicologo #1</string>
    <string name="psicologo_2_text">Psicologo #2</string>
    <string name="psicologo_3_text">Psicologo #3</string>
    <string name="psicologo_4_text">Psicologo #4</string>
    <string name="psicologo_5_text">Psicologo #5</string>
    <string name="contrase_a_actual_text">Contraseña actual:</string>
    <string name="contrasena_hint">contraseña</string>
    <string name="nueva_contrase_a_text">Nueva contraseña:</string>
    <string name="contrasena_de_nuevo">Vuelva a escribir la contraseña:</string>
    <string name="regresar_a_login_text">Regresar a login</string>
    <string name="email_text">Email:</string>
    <string name="email_hint">Email</string>
    <string name="usuario_text">Usuario:</string>
    <string name="contrase_a_text">Contraseña:</string>
    <string name="confirmar_contrase_a_hint">Confirmar contraseña:</string>
    <string name="contrase_a_hint">Contraseña</string>
    <string name="crear_usuario_text">Crear usuario</string>
    <string name="ya_tienes_cuenta_text">¿Ya tienes una cuenta? Iniciar sesion</string>
    <string name="contactos_confianza_text">Sus contactos de confianza:</string>
    <string name="crea_un_contacto_de_confianza_text">Crea un contacto de confianza</string>
</resources>