<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.nasser.appellas.ui.AppViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_base_vino"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="174dp"
            android:layout_height="177dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/logo_app_foreground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/minimum_gap"
                    android:layout_marginRight="@dimen/minimum_gap"
                    android:text="@string/email_text"
                    android:textColor="@color/color_iconos_negros"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/email_hint"
                    android:textColorHint="@color/color_iconos_negros"
                    app:boxBackgroundColor="@color/color_fondo_iconos"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/color_iconos_negros"
                    app:placeholderText="p.e 00245818@uca.edu.sv"
                    app:placeholderTextColor="@color/color_iconos_negros"
                    app:startIconDrawable="@drawable/ic_mujer2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:text="@{viewmodel.emailInput}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/minimum_gap"
                    android:layout_marginRight="@dimen/minimum_gap"
                    android:text="@string/usuario_text"
                    android:textColor="@color/color_iconos_negros"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/user_name_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/usuario_hint"
                    android:textColorHint="@color/color_iconos_negros"
                    app:boxBackgroundColor="@color/color_fondo_iconos"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/color_iconos_negros"
                    app:placeholderText="p.e Jnasser513"
                    app:placeholderTextColor="@color/color_iconos_negros"
                    app:startIconDrawable="@drawable/ic_mujer2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@{viewmodel.userInput}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/minimum_gap"
                    android:layout_marginRight="@dimen/minimum_gap"
                    android:text="@string/contrase_a_text"
                    android:textColor="@color/color_iconos_negros"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/contrasena_hint"
                    android:textColorHint="@color/color_iconos_negros"
                    app:boxBackgroundColor="@color/color_fondo_iconos"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/color_iconos_negros"
                    app:endIconMode="password_toggle"
                    app:placeholderTextColor="@color/color_iconos_negros"
                    app:startIconDrawable="@drawable/ic_mujer2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@{viewmodel.passwordInput}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/minimum_gap"
                    android:layout_marginRight="@dimen/minimum_gap"
                    android:text="@string/confirmar_contrase_a_hint"
                    android:textColor="@color/color_iconos_negros"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirm_password_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="230dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="10dp"
                    android:hint="@string/contrase_a_hint"
                    android:textColorHint="@color/color_iconos_negros"
                    app:boxBackgroundColor="@color/color_fondo_iconos"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxStrokeColor="@color/color_iconos_negros"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/color_iconos_negros"
                    app:placeholderTextColor="@color/color_iconos_negros"
                    app:startIconDrawable="@drawable/ic_mujer2">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirm_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:text="@{viewmodel.confirmPassword}" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:backgroundTint="@color/color_base_vino"
                android:onClick="@{()-> viewmodel.registerUser()}"
                android:text="@string/crear_usuario_text"
                android:textColor="@color/color_iconos_negros"
                android:textStyle="bold"
                app:rippleColor="@color/color_iconos_negros"
                app:strokeColor="@color/color_iconos_negros"
                app:strokeWidth="1dp" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewmodel.goLoginFragment()}"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/ya_tienes_cuenta_text"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</layout>