<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewmodel"
            type="com.nasser.appellas.ui.AppViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:background="@color/color_base_vino"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="174dp"
            android:layout_height="177dp"
            android:src="@mipmap/logo_app_foreground" />

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="@dimen/minimum_gap"
                android:layout_marginRight="@dimen/minimum_gap"
                android:text="@string/nombre_de_usuario_text"
                android:textColor="@color/color_iconos_negros"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/user_name_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginBottom="@dimen/default_gap"
                android:hint="@string/usuario_hint"
                android:textColorHint="@color/color_iconos_negros"
                app:boxBackgroundColor="@color/color_fondo_iconos"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/color_iconos_negros"
                app:placeholderText="@string/ejemplo_usuario"
                app:placeholderTextColor="@color/color_iconos_negros"
                app:startIconDrawable="@drawable/ic_mujer2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_input_text"
                    android:text="@{viewmodel.userChangeInput}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="@dimen/minimum_gap"
                android:layout_marginRight="@dimen/minimum_gap"
                android:text="@string/contrase_a_actual_text"
                android:textColor="@color/color_iconos_negros"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginBottom="@dimen/default_gap"
                android:hint="@string/contrasena_hint"
                android:textColorHint="@color/color_iconos_negros"
                app:boxBackgroundColor="@color/color_fondo_iconos"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/color_iconos_negros"
                app:endIconMode="password_toggle"
                app:placeholderText="p.e Jnasser513"
                app:placeholderTextColor="@color/color_iconos_negros"
                app:startIconDrawable="@drawable/ic_mujer2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_input_text"
                    android:layout_width="match_parent"
                    android:text="@{viewmodel.passChangeInput}"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="@dimen/minimum_gap"
                android:layout_marginRight="@dimen/minimum_gap"
                android:text="@string/nueva_contrase_a_text"
                android:textColor="@color/color_iconos_negros"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_password_text_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_marginBottom="@dimen/default_gap"
                android:hint="@string/contrasena_hint"
                android:textColorHint="@color/color_iconos_negros"
                app:boxBackgroundColor="@color/color_fondo_iconos"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/color_iconos_negros"
                app:endIconMode="password_toggle"
                app:placeholderText="p.e Jnasser513"
                app:placeholderTextColor="@color/color_iconos_negros"
                app:startIconDrawable="@drawable/ic_mujer2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_input_text"
                    android:layout_width="match_parent"
                    android:text="@{viewmodel.newPassInput}"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="@dimen/minimum_gap"
                android:layout_marginRight="@dimen/minimum_gap"
                android:text="@string/contrasena_de_nuevo"
                android:textColor="@color/color_iconos_negros"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_edit_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:hint="@string/contrasena_hint"
                android:textColorHint="@color/color_iconos_negros"
                app:boxBackgroundColor="@color/color_fondo_iconos"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/color_iconos_negros"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/color_iconos_negros"
                app:placeholderText="p.e Jnasser513"
                app:placeholderTextColor="@color/color_iconos_negros"
                app:startIconDrawable="@drawable/ic_mujer2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_new_input_text"
                    android:layout_width="match_parent"
                    android:text="@{viewmodel.confirmNewInput}"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>


            <Button
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="280dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/minimum_gap"
                android:backgroundTint="@color/color_base_vino"
                android:onClick="@{()-> viewmodel.changePassword()}"
                android:gravity="center"
                android:text="@string/cambiar_contrasena_text"
                android:textColor="@color/color_iconos_negros"
                android:textStyle="bold"
                app:rippleColor="@color/color_iconos_negros"
                app:strokeColor="@color/color_iconos_negros"
                app:strokeWidth="1dp" />

            <TextView
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewmodel.goLoginFragment()}"
                android:layout_marginTop="@dimen/default_gap"
                android:gravity="center"
                android:text="@string/regresar_a_login_text"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</layout>